@@ -7,11 +7,17 @@ arch_check_usable_kernel () {
 }
 
 arch_get_kernel () {
-	version=2.4.27-2
-	
-	if [ -n "$NUMCPUS" ] && [ "$NUMCPUS" -gt 1 ]; then
-		echo "kernel-image-$version-smp"
+	if [ "$KERNEL_MAJOR" = 2.4 ]; then
+		imgbase=kernel-image
+		version=2.4.27-2
+	else
+		imgbase=linux-image
+		version=$KERNEL_MAJOR-alpha
 	fi
 	
-	echo "kernel-image-$version-generic"
+	if [ -n "$NUMCPUS" ] && [ "$NUMCPUS" -gt 1 ]; then
+		echo "$imgbase-$version-smp"
+	fi
+	
+	echo "$imgbase-$version-generic"
 }
