@@ -1,10 +1,15 @@
 cpuinfo escher.cpuinfo
-majors 2.4
+majors 2.4 2.6
 kernel-2.4 kernel-image-2.4.27-2-generic
+kernel-2.6 linux-image-2.6-alpha-generic
 usable \
   kernel-image-2.4.26-1-generic \
   kernel-image-2.4.26-1-smp \
   kernel-image-2.4-generic \
   kernel-image-2.4-smp \
   kernel-image-2.4.27-2-generic \
-  kernel-image-2.4.27-2-smp
+  kernel-image-2.4.27-2-smp \
+  linux-image-2.6-alpha-smp \
+  linux-image-2.6-alpha-generic \
+  linux-image-2.6.15-1-alpha-smp \
+  linux-image-2.6.15-1-alpha-generic
