@@ -2,13 +2,14 @@ base-installer (1.43) UNRELEASED; urgency=low
 
   [ Frans Pop ]
   * Fix empty option in initramfs generator list.
+  * Add support for 2.6 kernels on alpha.
 
   [ Martin Michlmayr ]
   * Add support for 2.6 kernels on ARM.
   * Add support for NSLU2 (arm, armeb).
   * Add a test suite entry for mips/sb1-swarm-bn kernels.
 
- -- Frans Pop <fjp@debian.org>  Wed, 11 Jan 2006 03:13:45 +0100
+ -- Frans Pop <fjp@debian.org>  Sat, 14 Jan 2006 22:01:07 +0100
 
 base-installer (1.42) unstable; urgency=low
 
